# solanaut

./: .gitignore  Cargo.toml  LICENSE  README.md  README.org
client/: Cargo.toml
client/rust_client/: Cargo.toml
client/rust_client/src/: main.rs
client/ts_client/: bun.lockb  package.json
client/ts_client/src/: .#test.ts  App.tsx  index.css  main.tsx  test.ts
client/ts_client/src/components/: TransferSol.tsx  Wallet.tsx  WalletContextProvider.tsx
client/typescript/: package-lock.json  package.json
client/typescript/src/: counter.ts  main.ts
programs/native_program/: Cargo.toml
programs/native_program/src/: .#lib.rs  lib.rs
