[package]
name = "native_program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "native_program"
crate-type = ["cdylib"]  # Required for Solana programs to compile to a dynamic library


[dependencies]
solana-client = "2.0.8"
solana-program = "2.0.8"
